WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120407
Resolve unused parameter warning in WebKitAccessibleInterfaceText.cpp
https://bugs.webkit.org/show_bug.cgi?id=120407
Summary
Resolve unused parameter warning in WebKitAccessibleInterfaceText.cpp
Tamas Czene
Reported
2013-08-28 06:19:56 PDT
Resolve unused parameter warning in WebKitAccessibleInterfaceText.cpp
Attachments
proposed patch
(1.46 KB, patch)
2013-08-28 06:21 PDT
,
Tamas Czene
darin
: review-
darin
: commit-queue-
Details
Formatted Diff
Diff
proposed patch
(1.44 KB, patch)
2013-08-30 02:12 PDT
,
Tamas Czene
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-08-28 06:20:37 PDT
<
rdar://problem/14855742
>
Tamas Czene
Comment 2
2013-08-28 06:21:56 PDT
Created
attachment 209872
[details]
proposed patch
Darin Adler
Comment 3
2013-08-28 09:41:15 PDT
Comment on
attachment 209872
[details]
proposed patch Since this function is local to this file, it doesn't make sense to pass and ignore an argument. We should just remove this argument from this function and all the call sites. I think it’s better style to just remove the argument name entirely rather than commenting it out, but it’s debatable I suppose. I also think the spacing inside the /* */ draws too much attention to the unused argument.
Tamas Czene
Comment 4
2013-08-30 02:12:11 PDT
Created
attachment 210081
[details]
proposed patch I wouldn't really like to delete it, because the name can refer to its purpose.
Darin Adler
Comment 5
2013-08-30 08:00:53 PDT
Comment on
attachment 210081
[details]
proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=210081&action=review
> Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:715 > +static VisibleSelection wordAtPositionForAtkBoundary(const AccessibilityObject* /*coreObject*/, const VisiblePosition& position, AtkTextBoundary boundaryType)
You say “the name refers to its purpose”, but “core object” means nothing to me. Core of what? What object? It’s not adding anything.
WebKit Commit Bot
Comment 6
2013-08-30 08:23:20 PDT
Comment on
attachment 210081
[details]
proposed patch Clearing flags on attachment: 210081 Committed
r154882
: <
http://trac.webkit.org/changeset/154882
>
WebKit Commit Bot
Comment 7
2013-08-30 08:23:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug