Resolve unused parameter warning in FindController.cpp https://bugs.webkit.org/show_bug.cgi?id=120407

Patch by Tamas Czene <tczene@inf.u-szeged.hu> on 2013-08-30
Reviewed by Darin Adler.

* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(wordAtPositionForAtkBoundary):

Canonical link: https://commits.webkit.org/138510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154882 268f45cc-cd09-0410-ab3c-d52691b4dbfc